# garch-volatility-modeling

./: DATA.md  MODEL_CARD.md  Makefile  README.md  RESULTS.md  pyproject.toml
data/: AAPL_2015_2023.csv  JNJ_2015_2023.csv  JPM_2015_2023.csv  MSFT_2015_2023.csv  SPY_2015_2023.csv  XOM_2015_2023.csv
reports/: SOURCE_RUN.txt
reports/latest/: config.yaml  data_manifest.json  environment.json  metrics.json  predictions.parquet  statistical_tests.json
src/volatilitylab/: core.py  run.py
tests/: test_core.py
